<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">博宝成长轴</string>
    <string name="dis"></string>
    <string name="action_settings">Settings</string>
    <string name="win_theme">@android:style/Theme.Light.NoTitleBar</string>
    <string name="test">此处文字为代替内容</string>
    <string name="info">详细信息</string>
    
    <!-- back_part -->
    <string name="back">&lt; 返回</string>
    
    <!-- login -->
    <string name="user_name">用户名</string>
    <string name="password">密　码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="forget">忘记密码</string>
    <!-- find_password -->
    <string name="find">找回</string>
    
    <!-- register -->
    <string name="input_name">请输入用户名（只能是字母或者数字）</string>
    <string name="input_password">请输入密码</string>
    <string name="re_password">再次确认密码</string>
    <string name="input_mail">请输入邮箱</string>
    
    <!-- botome_part -->
    <string name="line">成长轴</string>
    <string name="friend">好友</string>
    <string name="cross">穿越</string>
    <string name="set">设置</string>
    
    <!-- info -->
    <string name="gender">性　别</string>
    <string name="location">所在地</string>
    <string name="phone">手　机</string>
    <string name="mail">邮　箱</string>
    <string name="age">年　龄</string>
    <string name="birth">生　日</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="remark">备　注</string>
    <string name="change_info">编辑个人信息</string>
    <!-- info_change -->
    <string name="sava">保存</string>
    <!-- info_head -->
    <string name="select_head">选择你要的头像</string>
    
    <!-- node_view -->
    <string name="edit">编辑</string>
    <string name="delete">删除</string>
    <string name="review">评论</string>
    <!-- node_add -->
    <string name="finish">√完成</string>
    <string name="type">类型：</string>
    <string name="photo">图片</string>
    <string name="face">表情</string>
    
    <!-- review_add -->
    <string name="title">标题</string>
    <string name="send">发送</string>
    <string name="point">···</string>
    
    <!-- friend_add -->
    <string name="name_add">添加好友</string>
    <string name="condition_add">按条件搜索</string>
    <!-- friend_add_name -->
    <string name="search_name">请输入对方账号</string>
    <string name="search">搜索</string>
    <!-- friend_add_result -->
    <string name="back_friend">返回好友列表</string>
    <!-- friend_info -->
    <string name="add_friend">加为好友</string>
    
    <!-- cross -->
    <string name="input_cross_time">请输入要穿越的时间点</string>
    <string name="go">Gooooooooooooooo</string>
    
    <!-- set -->
    <string name="stat">数据统计</string>
    <string name="theme">主题设置</string>
    <string name="about">关于我们</string>
    <string name="logout">注销登录</string>
    <!-- stat -->
    <string name="stat_node">成长记录统计</string>
    <string name="stat_review">成长回执统计</string>
    <string name="stat_line">创建成长数轴</string>
    <!-- theme -->
    <string name="simple">纯色简约</string>
    <string name="colorful">色彩炫丽</string>
    <!-- about -->
    <string name="author">制作者：博宝小分队</string>
    <string name="version">版本信息：v1.0</string>
    
</resources>
