<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
	
	<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content">
	    
	    <include layout="@layout/back_part"/>
	</LinearLayout>
	
	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:padding="20dp"
	    android:orientation="vertical">
		<LinearLayout
			android:layout_width="fill_parent"
	    	android:layout_height="wrap_content">
	    	<TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/age"/>
		    <EditText
		        android:layout_width="fill_parent"
		        android:layout_height="40dp"
		        android:hint="@string/point"
		        android:background="@drawable/edit_corners_all"/>
		</LinearLayout>
		
	    <LinearLayout
			android:layout_width="fill_parent"
	    	android:layout_height="wrap_content">
		    
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/gender"/>
		    
		    <RadioGroup
		        android:id="@+id/gender"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:checkedButton="@+id/male"
		        android:orientation="horizontal">
		        
		        <RadioButton
		            android:id="@+id/male"
		            android:layout_width="wrap_content"
		        	android:layout_height="wrap_content"
		        	android:checked="true"
		        	android:text="@string/male"/>
		        
		        <RadioButton
		            android:id="@+id/female"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		        	android:text="@string/female"/>
		    </RadioGroup>
	    </LinearLayout>
	    
	    <LinearLayout
			android:layout_width="fill_parent"
	    	android:layout_height="wrap_content">
		    
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/work"/>
		    
		    <Spinner
		        android:id="@+id/work"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"/>
	    </LinearLayout>
	    
	    <Button
	        android:id="@+id/search"
	        android:onClick="onClick_Search"
	        android:layout_width="fill_parent"
	        android:layout_height="45dp"
	        android:layout_marginTop="20dp"
	        android:background="@drawable/button_corners_all"
	        android:text="@string/search"/>
	</LinearLayout>
</LinearLayout>