<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
 
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <include layout="@layout/back_part" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:padding="20dp" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="45dp"
                android:layout_marginBottom="3dp"
                android:background="@drawable/edit_corners_all"
                android:hint="@string/input_name" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="45dp"
                android:layout_marginBottom="3dp"
                android:background="@drawable/edit_corners_all"
                android:hint="@string/input_password"
                android:inputType="textPassword" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="45dp"
                android:layout_marginBottom="3dp"
                android:background="@drawable/edit_corners_all"
                android:hint="@string/re_password"
                android:inputType="textPassword" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="45dp"
                android:background="@drawable/edit_corners_all"
                android:hint="@string/input_mail" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="80dp" >

            <Button
                android:id="@+id/register"
                android:onClick="onClick_Register"
                android:layout_width="fill_parent"
                android:layout_height="45dp"
                android:background="@drawable/button_corners_all"
                android:text="@string/register" />
        </LinearLayout>
     </LinearLayout>
</LinearLayout>