<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
	
	<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content">
	    
	    <include layout="@layout/back_part"/>
	</LinearLayout>
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:padding="20dp"
        android:orientation="vertical">
	    
	    <EditText 
	        android:layout_width="fill_parent"
	        android:layout_height="45dp"
	        android:background="@drawable/edit_corners_all"
	        android:layout_marginBottom="3dp"
	        android:hint="@string/input_name"/>
	    
	    <EditText 
	        android:layout_width="fill_parent"
	        android:layout_height="45dp"
	        android:background="@drawable/edit_corners_all"
	        android:layout_marginBottom="10dp"
	        android:hint="@string/input_mail"/>
	    
	    <Button
	        android:id="@+id/find"
	        android:layout_width="fill_parent"
	        android:layout_height="45dp"
	        android:background="@drawable/button_corners_all"
	        android:text="@string/find"/>
    </LinearLayout>
</LinearLayout>
