<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
	
	<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content">
	    
	    <include layout="@layout/back_part"/>
	</LinearLayout>
	
	<LinearLayout
	    android:layout_width="fill_parent"    
    	android:layout_height="fill_parent"
    	android:paddingLeft="20dp"
    	android:paddingRight="20dp"
    	android:paddingBottom="5dp"
    	android:orientation="vertical">
	    
	    <TextView
	        android:layout_width="fill_parent"
	        android:layout_height="0dp"
	        android:layout_weight="1"
	        android:paddingTop="10dp"
	        android:gravity="top"
	        android:text="@string/test"/>
	    
	    <LinearLayout
	        android:layout_width="fill_parent"    
    		android:layout_height="45dp">
	        
	        <Button
	            android:id="@+id/edit"
	            android:onClick="onClick_Edit"
	            android:layout_width="wrap_content"    
    			android:layout_height="fill_parent"
    			android:layout_weight="1"
    			android:layout_margin="1dp"
    			android:background="@drawable/button_corners_all"
    			android:text="@string/edit"/>
	        
	        <Button
	            android:id="@+id/delete"
	            android:onClick="onClick_Delete"
	            android:layout_width="wrap_content"    
    			android:layout_height="fill_parent"
    			android:layout_weight="1"
    			android:layout_margin="1dp"
    			android:background="@drawable/button_corners_all"
    			android:text="@string/delete"/>
	        
	        <Button
	            android:id="@+id/review"
	            android:onClick="onClick_Review"
	            android:layout_width="wrap_content"    
    			android:layout_height="fill_parent"
    			android:layout_weight="1"
    			android:layout_margin="1dp"
    			android:background="@drawable/button_corners_all"
    			android:text="@string/review"/>
	    </LinearLayout>
	</LinearLayout>
</LinearLayout>
