<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

	<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content">
	    
	    <include layout="@layout/back_part"/>
	</LinearLayout>

	<ScrollView 
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:scrollbars="none"
	    android:fadingEdge="none">
	    
	    <LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical"
	        android:padding="20dp" >
	
	        <ImageView
	            android:id="@+id/head"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:background="@null"
	            android:src="@drawable/image"
	            tools:ignore="ContentDescription" />
	
	        <LinearLayout
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="20dp"
	            android:layout_marginBottom="20dp"
	            android:orientation="horizontal" >
	
	            <TextView
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_marginRight="10dp"
	                android:text="@string/user_name" />
	
	            <TextView
	                android:id="@+id/name"
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:text="@string/test"/>
	        </LinearLayout>
	        
	        <LinearLayout
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginBottom="20dp"
	            android:orientation="horizontal" >
	            
	            <TextView
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_marginRight="10dp"
	                android:text="@string/gender" />
	
	            <TextView
	                android:id="@+id/gender"
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:text="@string/male" />
	        </LinearLayout>
	   
	        <LinearLayout
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginBottom="20dp"
	            android:orientation="horizontal" >
	
	            <TextView
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_marginRight="10dp"
	                android:text="@string/phone" />
	
	            <TextView
	                android:id="@+id/phone"
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:text="@string/test" />
	        </LinearLayout>
	
	        <LinearLayout
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginBottom="20dp"
	            android:orientation="horizontal" >
	
	            <TextView
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_marginRight="10dp"
	                android:text="@string/location" />
	
	            <TextView
	                android:id="@+id/location"
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:text="@string/test" />
	        </LinearLayout>
	
	        <LinearLayout
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginBottom="20dp"
	            android:orientation="horizontal" >
	
	            <TextView
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_marginRight="10dp"
	                android:text="@string/birth" />
	
	            <TextView
	                android:id="@+id/birth"
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:text="@string/test" />
	        </LinearLayout>
	
	        <LinearLayout
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginBottom="20dp"
	            android:orientation="horizontal" >
	
	            <TextView
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_marginRight="10dp"
	                android:text="@string/age" />
	
	            <TextView
	                android:id="@+id/age"
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:text="@string/test" />
	        </LinearLayout>
	        
	        <LinearLayout
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginBottom="40dp"
	            android:orientation="horizontal" >
	
	            <TextView
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_marginRight="10dp"
	                android:text="@string/mail" />
	
	            <TextView
	                android:id="@+id/mail"
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:text="@string/test" />
	        </LinearLayout>
	    </LinearLayout>
    </ScrollView>
</LinearLayout>