<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
	
	<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content">
	    
	    <include layout="@layout/back_part"/>
	</LinearLayout>
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">
	    <TextView
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="20dp"
	        android:text="@string/search_name"/>
	    <EditText
	        android:id="@+id/name"
	        android:layout_width="fill_parent"
	        android:layout_height="40dp"
	        android:background="@drawable/edit_corners_all"
	        android:singleLine="true"
	        android:hint="@string/point"/>
	    <Button
	        android:id="@+id/search"
	        android:onClick="onClick_Search"
	        android:layout_width="fill_parent"
	        android:layout_height="45dp"
	        android:layout_marginTop="20dp"
	        android:background="@drawable/button_corners_all"
	        android:text="@string/search"/>
    </LinearLayout>
</LinearLayout>
